fix: remove dark mode

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -8,6 +8,7 @@
 
 html {
   font-size: 17px;
+  color-scheme: light only;
 }
 
 body {
